# skill-native-sdk

./: .editorconfig  .gitignore  Cargo.toml  README.md  codecov.yml  justfile  pyproject.toml  release-please-config.json  renovate.json  vx.toml
.github/actions/build-wheel/: action.yml
.github/workflows/: build-wheels.yml  ci.yml  release.yml
crates/skill-cli/: Cargo.toml
crates/skill-cli/src/: args.rs  commands.rs  display.rs  lib.rs  main.rs
crates/skill-core/: Cargo.toml
crates/skill-core/src/: cache.rs  dag.rs  lib.rs  python.rs  result.rs  safety.rs
crates/skill-runtime/: Cargo.toml
crates/skill-runtime/src/: bridge.rs  lib.rs  python.rs  subprocess.rs
crates/skill-schema/: Cargo.toml
crates/skill-schema/src/: lib.rs  manager.rs  models.rs  parser.rs  python.rs  scope.rs
docker/: docker-compose.e2e.yml
docker/blender/: Dockerfile  blender_runner.py
docker/mayapy/: Dockerfile
docs/: SKILL_SPEC_V2.md
python/skill_native_sdk/: __init__.py  _skill_native_core.pyi  decorators.py  executor.py  models.py  parser.py  registry.py
python/skill_native_sdk/adapters/: __init__.py
python/skill_native_sdk/adapters/langchain/: __init__.py
python/skill_native_sdk/adapters/mcp/: __init__.py  server.py
python/skill_native_sdk/adapters/openai/: __init__.py
python/skill_native_sdk/adapters/rest/: __init__.py
python/skill_native_sdk/cli/: __init__.py  main.py
skills/examples/blender-render/: SKILL.md
skills/examples/blender-render/scripts/: render_scene.py  set_render_output.py
skills/examples/invoice-parser/: SKILL.md  sample_invoice.txt
skills/examples/invoice-parser/scripts/: manual_review_flag.py  parse_invoice.py  post_to_accounting.py  validate_invoice.py
skills/examples/maya-animation/: SKILL.md
skills/examples/maya-animation/scripts/: bake_simulation.py  get_keyframes.py  set_keyframe.py
skills/examples/weather/: SKILL.md
skills/examples/weather/scripts/: get_current.py  get_forecast.py
src/: lib.rs
tests/: conftest.py  test_e2e_dcc.py  test_models.py  test_parser.py  test_registry.py
tests/fixtures/: blender_mock.py  mayapy_mock.py
