[build-system]
requires = ["maturin>=1.7,<2"]
build-backend = "maturin"

[project]
name = "skill-native-sdk"
version = "0.1.0"
description = "SKILL.md → anywhere. Write once in SKILL.md, deploy as MCP / OpenAI / LangChain / REST."
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.7"
authors = [
    { name = "Hal", email = "13111745+loonghao@users.noreply.github.com" },
]
keywords = ["mcp", "ai", "tools", "skill", "llm", "agent"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development :: Libraries :: Python Modules",
]

# Zero third-party Python dependencies.
# All YAML parsing is handled by the compiled Rust extension (skill-schema crate).
# Models use stdlib dataclasses. CLI uses stdlib argparse.
dependencies = []

[project.optional-dependencies]
# AI framework adapters (all optional, install only what you need)
mcp      = ["mcp>=1.0"]
openai   = ["openai>=1.0"]
langchain = ["langchain-core>=0.2"]
rest     = ["fastapi>=0.110", "uvicorn>=0.29"]
# Development tools
dev = [
    "pytest>=7.0",
    "pytest-cov>=4.0",
    "ruff>=0.4",
    "mypy>=1.0",
    "maturin>=1.7",
]

[project.scripts]
skn = "skill_native_sdk.cli.main:main"

[project.urls]
Homepage = "https://github.com/loonghao/skill-native-sdk"
Repository = "https://github.com/loonghao/skill-native-sdk"
Issues = "https://github.com/loonghao/skill-native-sdk/issues"

[tool.maturin]
# Python source packages are in python/
python-source = "python"
# Feature flag that activates PyO3 bindings in all crates
features = ["python-bindings", "ext-module"]
# The extension module name matches `fn _skill_native_core` in src/lib.rs
module-name = "skill_native_sdk._skill_native_core"
# Build for abi3 (stable ABI) — one wheel for all Python 3.8+
# Python 3.7 gets a separate non-abi3 cp37 wheel (see build-wheels.yml)
python-packages = ["skill_native_sdk"]

[tool.ruff]
line-length = 100
target-version = "py37"

[tool.ruff.lint]
select = ["E", "F", "I", "UP"]

[tool.mypy]
python_version = "3.7"
strict = true

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
