[package]
name = "skill-cli"
description = "Rust-powered CLI for skill-native-sdk (clap-based, zero Python deps)"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
skill-schema.workspace = true
skill-core.workspace = true
skill-runtime.workspace = true
serde_json.workspace = true
clap = { version = "4", features = ["derive"] }
pyo3 = { workspace = true, optional = true }

[features]
default = []
python-bindings = ["pyo3"]

[dev-dependencies]
serde_json.workspace = true
