[package]
name = "skill-cli"
description = "skn — the Rust-powered CLI for skill-native-sdk: list/describe/run/chain SKILL.md tools"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
documentation = "https://docs.rs/skill-cli"
keywords = ["mcp", "ai", "skill", "cli", "tool"]
categories = ["command-line-utilities", "development-tools"]

[dependencies]
skill-schema.workspace = true
skill-core.workspace = true
skill-runtime.workspace = true
serde_json.workspace = true
clap = { version = "4", features = ["derive"] }
pyo3 = { workspace = true, optional = true }

[features]
default = []
python-bindings = ["pyo3"]

[[bin]]
name = "skn"
path = "src/main.rs"

[dev-dependencies]
serde_json.workspace = true
